@@ -486,6 +486,8 @@ Other Changes
 * SOLR-6523: Provide SolrJ support for specifying stateFormat while creating Collections.
   (Anshum Gupta)
 
+* SOLR-6881: Add split.key support for SPLITSHARD via SolrJ (Anshum Gupta)
+
 ==================  4.10.3 ==================
 
 Bug Fixes
